--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>LLMA_T03</title>
 </head>
 <body>
-    
+    <h1>LLMA_T03</h1>
+    <img src="img/Dodge Charger 1969.jpg">
+    <a href="Pàgina_1.html">Pàgina 1</a>
+    <a href="Pàgina_2.html">Pàgina 2</a>
 </body>
 </html>
 
